# sdk

./: .buildinfo  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Modules.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_sources/: index.rst.txt
examples/airbot_aloha/: .gitlab-ci.yml  CMakeLists.txt  README.md
examples/airbot_aloha/cmake/: Packing.cmake
examples/airbot_aloha/python/: setup.py
examples/airbot_aloha/python/airbot_aloha/: convert_episodes.py  replay_episodes.py
examples/airbot_aloha/src/: airbot_demonstrate.cpp  airbot_demonstrate_dual.cpp
examples/airbot_aloha/src/camera/: webcam.cpp
examples/airbot_aloha/sys/: postinst  prerm
examples/airbot_tools/: .gitlab-ci.yml  CMakeLists.txt
examples/airbot_tools/cmake/: Packing.cmake
examples/airbot_tools/src/: airbot_kbd_ctrl.cpp  airbot_packing.cpp  airbot_sync.cpp
examples/cpp/airbot_aloha/: .gitlab-ci.yml  CMakeLists.txt  README.md
examples/cpp/airbot_aloha/cmake/: Packing.cmake  Version.cmake
examples/cpp/airbot_aloha/python/: requirements.txt  setup.py
examples/cpp/airbot_aloha/python/airbot_aloha/: __init__.py  convert_episodes.py  hdf5er.py
examples/cpp/airbot_aloha/src/: airbot_demonstrate.cpp  airbot_demonstrate_dual.cpp  http.hpp
examples/cpp/airbot_aloha/sys/: postinst  prerm
examples/cpp/airbot_tools/: .gitlab-ci.yml  CMakeLists.txt
examples/cpp/airbot_tools/cmake/: Packing.cmake  Version.cmake
examples/cpp/airbot_tools/src/: airbot_auto_set_zero.cpp  airbot_demonstrate.cpp  airbot_demonstrate_dual.cpp  airbot_kbd_ctrl.cpp  airbot_play_node.cpp  airbot_set_zero.cpp  airbot_sync.cpp  demonstrate.cpp  demonstrate_net.cpp  http.hpp
examples/cpp/airbot_tools/src/camera/: webcam.cpp  webcam.hpp
examples/python/: iap_burn.py  pyproject.toml
html/: Classes.html  Functions.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
html/_sources/: Classes.rst.txt  Functions.rst.txt
python/: .appveyor.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README-CN.md  README.md  setup.py  test.hpp
python/.github/workflows/: conda.yml
python/docs/: README.md  conf.py  requirements.txt
python/docs/source/: Modules.rst  class.rst  conf.py  founction.rst  index.rst
python/examples/: get_current_joint_info.py  gravity_compensation.py  helloworldRobot.py  joing_speed.py  joint_position.py  joint_speed.py  test_gravity_compensation.py  test_joint_position.py  test_joint_speed.py  test_joint_velocity.py  test_motor.py  test_replay_mit.py  tool_kbd_ctrol.py  tool_set_zero.py
python/examples/sync/: receiver.py  sender.py
python/src/: doc.hpp  docstrings.h  main.cpp
ros/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  package.xml  test.py
ros/launch/: airbot_arm.launch  joy_proxy.launch
ros/src/: joy_proxy.cpp  main.cpp
ros/tests/: example.py
ros/utils/: format.sh
ros2/: CMakeLists.txt  README.md  package.xml
ros2/launch/: launch_robot.launch.py
ros2/src/: airbot_main.cpp  joy_proxy.cpp
utils/: format.sh
web/: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md
web/include/: arm.hpp  controller.hpp  server.hpp  service.hpp  websocket.hpp
web/src/: entry.cpp  remote_sync.cpp
web/src/arm/: arm.cpp
web/src/server/: controller.cpp  server.cpp  service.cpp  websocket.cpp
