[tool.poetry]
name = "airbot_pytools"
version = "2.7.0"
description = "Python tools for AIRBOT"
authors = ["Beiwen Tian <tianbeiwen88@gmail.com>"]
license = "GPL-3.0"

# Specify the Python versions your project is compatible with
[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
